--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* .carouseltest{
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+} */
+
+.carousel-item{
+  width: 100px;
+  height: 80vh;
+  overflow: hidden;
+}
