--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,18 @@ code {
     monospace;
 }
 
+a{
+  text-decoration: none;
+  /* color: var(--bs-dark) */
+}
+
 .navbar-nav {
   --bs-nav-link-color: var(--bs-navbar-color);
   --bs-nav-link-hover-color: rgb(80 77 193 / 80%);
   --bs-nav-link-disabled-color: var(--bs-navbar-disabled-color);
+  --bs-navbar-active-color: var(--bs-primary);
+}
+
+.nav-item{
+  margin: auto 0 auto 2em;
 }
