--- a/src/index.css
+++ b/src/index.css
@@ -12,17 +12,44 @@ code {
     monospace;
 }
 
-/* .carouseltest{
-  width: 100px;
-  height: 100px;
-  overflow: hidden;
-} */
+a{
+  text-decoration: none;
+  /* color: var(--bs-dark) */
+}
 
-.carousel-item{
-  width: 100px;
+.navbar-nav {
+  --bs-nav-link-color: var(--bs-navbar-color);
+  --bs-nav-link-hover-color: rgb(80 77 193 / 80%);
+  --bs-nav-link-disabled-color: var(--bs-navbar-disabled-color);
+  --bs-navbar-active-color: var(--bs-primary);
+}
+
+.nav-item{
+  margin: auto 0 auto 2em;
+}
+
+.carousel-container{
   height: 80vh;
   overflow: hidden;
 }
+
+/* .carousel-caption{
+  top: 50vh;
+}
+
+.carousel-indicators{
+  top: 70vh;
+} */
+/* .carousel .slide{
+  height: 80vh;
+  overflow: hidden;
+  max-height: 80vh;
+} */
+
+/* .carousel-item{
+  height: 100%;
+  overflow: hidden;
+} */
 .carousel-caption{
   color: white !important;
 }
@@ -31,8 +58,8 @@ code {
   height: 15px;
   border-radius: 50%;
 }
-.navbar-nav {
-    --bs-nav-link-color: var(--bs-navbar-color);
-    --bs-nav-link-hover-color: rgb(80 77 193 / 80%);
-    --bs-nav-link-disabled-color: var(--bs-navbar-disabled-color);
+
+.carousel-item img{
+  max-height: 80vh;
 }
+
