--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: Inter;
+  background-image: linear-gradient(90deg, rgb(9, 36, 36) 3%, rgb(50, 94, 100) 100%, rgba(238, 130, 238, 1) 100%);
+  /* background-image: linear-gradient(90deg, rgb(28, 33, 50) 0%, rgba(118,135,141,1) 71%, rgb(123, 136, 104) 95%); */
+  color: white;
 }
 
 code {
@@ -55,8 +58,8 @@ a{
   color: white !important;
 }
 .carousel-indicators [data-bs-target] {
-  width: 15px;
-  height: 15px;
+  width: 10px;
+  height: 10px;
   border-radius: 50%;
 }
 
