--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: Inter;
-  background-image: linear-gradient(90deg, rgb(9, 36, 36) 3%, rgb(50, 94, 100, 0.7) 30%, rgb(50, 94, 100) 90%, rgba(9, 36, 36, 0.918) 100%);
+  /* background-image: linear-gradient(90deg, rgb(9, 36, 36) 3%, rgb(50, 94, 100, 0.7) 30%, rgb(50, 94, 100) 90%, rgba(9, 36, 36, 0.918) 100%); */
   /* background-image: linear-gradient(90deg, rgb(28, 33, 50) 0%, rgba(118,135,141,1) 71%, rgb(50, 94, 100) 95%); */
 
 }
