--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+:root{
+  padding: 0px;
+  margin: 0px;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -65,3 +69,11 @@ a{
   overflow: hidden;
 }
 
+.accordion-button {
+  padding: 0px;
+}
+
+.accordion-button::after {
+  position: absolute;
+  right: 0;
+}
