--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,31 @@
-:root{
-  padding: 0px;
-  margin: 0px;
+html{
+  height: 100%;
+  width: 100%;
 }
 body {
+  width: 100%;
+  height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: Inter;
 }
 
+/* *{
+  padding: 0px;
+  margin: 0px;
+} */
+
+.App{
+  height: 100%;
+}
+
+#root{
+  height: 100%;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
